travel page map and menu added

--- a/pages/travel_blog.html
+++ b/pages/travel_blog.html
@@ -11,6 +11,10 @@
       href="https://fonts.googleapis.com/css2?family=Playwrite+NZ:wght@100..400&family=Saira+Condensed:wght@100;200;300;400;500;600;700;800;900&family=Sour+Gummy:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+    />
   </head>
   <body>
     <h2>My Travel Side</h2>
@@ -1308,5 +1312,45 @@
         />
       </svg>
     </div>
+
+    <div class="data-container">
+      <div class="properties-of-country">
+        <div class="frow rowbox">
+          <div class="box">
+            <h3 id="language">Turkish</h3>
+            <p>Language</p>
+          </div>
+          <div class="box">
+            <h3 id="name">Turkey</h3>
+            <p>Name</p>
+          </div>
+          <div class="box">
+            <h3 id="capital">Ankara</h3>
+            <p>Capital</p>
+          </div>
+        </div>
+        <div class="srow rowbox">
+          <a href="">
+            <div class="box">
+              <i id="bestdestinations" class="fa-solid fa-location-dot"></i>
+              <p>Best Destinations</p>
+            </div>
+          </a>
+          <div id="myMemories" class="box">
+            <i class="fa-solid fa-map"></i>
+            <p>My Memories</p>
+          </div>
+        </div>
+        <div class="trow rowbox">
+          <div class="box">
+            <img id="flag" src="" alt="" />
+          </div>
+        </div>
+        <div class="arrow">
+          <i class="fa-solid fa-xmark fa-spin" id="close"></i>
+        </div>
+      </div>
+    </div>
   </body>
+  <script src="/utils/travel_script.js"></script>
 </html>
