visited country gallery is done

--- a/pages/travel_blog.html
+++ b/pages/travel_blog.html
@@ -1345,10 +1345,12 @@
               <p>Best Destinations</p>
             </div>
           </a>
-          <div id="myMemories" class="box">
-            <i class="fa-solid fa-map"></i>
-            <p>My Memories</p>
-          </div>
+          <a id="myMemories" href="">
+            <div class="box">
+              <i class="fa-solid fa-map"></i>
+              <p>My Memories</p>
+            </div>
+          </a>
         </div>
         <div class="trow rowbox">
           <div class="box">
