--- a/index.html
+++ b/index.html
@@ -36,4 +36,27 @@
     </footer>
   </body>
   <script src="/script.js"></script>
+  <script type="module">
+    // Import the functions you need from the SDKs you need
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/11.1.0/firebase-app.js";
+    import { getAnalytics } from "https://www.gstatic.com/firebasejs/11.1.0/firebase-analytics.js";
+    // TODO: Add SDKs for Firebase products that you want to use
+    // https://firebase.google.com/docs/web/setup#available-libraries
+
+    // Your web app's Firebase configuration
+    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+    const firebaseConfig = {
+      apiKey: "AIzaSyBh0lzids3CYhoc0G53z2T66ZV1bP4SAYM",
+      authDomain: "iskburcin-web.firebaseapp.com",
+      projectId: "iskburcin-web",
+      storageBucket: "iskburcin-web.firebasestorage.app",
+      messagingSenderId: "18787669655",
+      appId: "1:18787669655:web:f0c59cbf0b2d3c649d3bd2",
+      measurementId: "G-Q8JWK6S2ZN",
+    };
+
+    // Initialize Firebase
+    const app = initializeApp(firebaseConfig);
+    const analytics = getAnalytics(app);
+  </script>
 </html>
