about me side is filled, and some bug are solved

--- a/pages/about.html
+++ b/pages/about.html
@@ -3,8 +3,215 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About</title>
+    <title>About Me</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Playwrite+NZ:wght@100..400&family=Saira+Condensed:wght@100;200;300;400;500;600;700;800;900&family=Sour+Gummy:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="/assets/styles/style_main.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.1.2/fullpage.min.js"></script>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.1.2/fullpage.min.css"
+    />
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+  />
   </head>
-  <body></body>
+  <body>
+    <div id="fullpage">
+      <section class="section" id="section1">
+        <header>
+          <h1>Who Am I?</h1>
+          <p class="intro">I dont even know but, hi, I m Burcin.</p>
+        </header>
+      </section>
+
+      <section class="section" id="section2">
+        <div class="bio">
+          <div class="profile-photo">
+            <img
+              src="https://ik.imagekit.io/iskburcin/czk/img7.jpg?updatedAt=1736847927586"
+              alt="Burçin Işık"
+            />
+          </div>
+          <div class="bio-text">
+            <h2>Burçin Işık</h2>
+            <p>
+              A 22-year-old Computer Engineering student at Alanya University,
+              currently on an Erasmus exchange at Politechnica Opoliska for the
+              winter semester. I’m passionate about coding, solving problems,
+              and constantly learning new things. In my free time, you can find
+              me reading, listening to music, traveling (although I’ve been
+              questioning it lately 😊), cooking, sleeping, or just
+              experimenting with new coding projects.
+            </p>
+            <br />
+            <p>
+              Though I’m not a very social person, I’ve learned it when i was a child i think. And, i like being alone, silence, calm.
+            </p>
+          </div>
+        </div>
+      </section>
+
+      <section class="section" id="section3">
+        <div class="intro-card">
+          <h2>My Journey in Tech - How I Started</h2>
+          <p>
+            I was initially introduced to the world of coding in university,
+            where I learned theoretical knowledge. But it wasn’t until I had my
+            first real-world internship at BRM Software that I realized the
+            power of coding to create actual projects. That was the moment I
+            understood that I could build something tangible, and this
+            experience motivated me to start developing apps on my own. My
+            journey from theory to practice has been incredibly rewarding, and I
+            continue to grow my skill set every day!
+          </p>
+        </div>
+      </section>
+
+      <section class="section" id="section4">
+        <h2>Projects - My Passion for Coding</h2>
+        <p>Here are some of the exciting projects I've worked on so far:</p>
+        <div class="projects">
+          <div class="grid">
+            <div class="card">
+              <h4>Yuzug / Aiemo</h4>
+              <p>
+                An emotion-based activity recommender that uses machine learning
+                for face recognition in Python. The UI is built with Flutter,
+                providing a seamless experience for users.
+              </p>
+            </div>
+            <div class="blob"></div>
+          </div>
+          <div class="grid">
+            <div class="card">
+              <h4>Erasmus Money Manager</h4>
+              <p>
+                This project came from a personal need. Since I'm not from a
+                wealthy family, I needed a way to keep track of all the
+                currencies I had while on Erasmus. This app helps me track my
+                expenses, so I can see how much I should spend daily, weekly,
+                and monthly.
+              </p>
+            </div>
+            <div class="blob"></div>
+          </div>
+          <div class="grid">
+            <div class="card">
+              <h4>MissionTimer</h4>
+              <p>
+                A simple task timer that records how much time is spent on each
+                task, helping you stay organized and productive.
+              </p>
+            </div>
+            <div class="blob"></div>
+          </div>
+          <div class="grid">
+            <div class="card">
+              <h4>Machine Learning Projects</h4>
+              <p>
+                Irish Flower Recognition Handwritten Digit Recognition Turkish
+                Dish Expert System Based on Fuzzy Logic
+              </p>
+            </div>
+            <div class="blob"></div>
+          </div>
+        </div>
+      </section>
+
+      <section class="section" id="section5">
+        <div class="intro-card" style="text-align: left;">
+          <h2>My Skills - What I Can Do</h2>
+          <p>
+            I’ve acquired a variety of skills over the years, and I'm always
+            expanding my knowledge. Here’s a quick overview of my expertise:
+            <ul>
+              <li>Languages: HTML, CSS, JavaScript, Python, Flutter, Java, C, C# </li>
+              <li>Tools & Technologies:
+                <ul>
+                  <li>Development: VS Code, IntelliJ IDEA, GitHub, Firebase, Flask</li>
+                  <li>Data Science: Jupyter, OpenCV, Microsoft SQL Server, Matplotlib, NumPy, Pandas, scikit-learn, TensorFlow</li>
+                  <li>Version Control: Git, GitHub</li>
+                  <li>API Testing: Postman</li>
+                </ul>
+              </li>
+            </ul>I’m always open to learning new tools and frameworks, as they help me stay on top of my game and tackle new
+            challenges with ease.
+          </p>
+        </div>
+      </section>
+
+      <section class="section" id="section6">
+        <h2>The Future - What's Next for Me?</h2>
+        <p>
+          The journey has just begun! I’m eager to explore more advanced technologies and build projects that can make a difference. My goal is to continue developing my skills in AI, Flutter, and web development, and eventually contribute to projects that solve real-world problems. As I continue my Erasmus journey and beyond, I look forward to collaborating with like-minded individuals and pushing the boundaries of what technology can achieve.
+        </p>
+      </section>
+
+      <section class="section" id="section7">
+        <h2>Contact Me</h2>
+        <div class="container">
+          <a href="https://github.com/iskburcin">
+            <div data-text="Github" style="--r:-15;" class="glass">
+              <i class="fa-brands fa-github"></i>
+            </div>
+          </a>
+          <a href="https://www.linkedin.com/in/iskburcin/">
+            <div data-text="LinkdIn" style="--r:5;" class="glass">
+              <i class="fa-brands fa-linkedin"></i>
+            </div>
+          </a>
+          <a href="https://bento.me/iskburcin">
+            <div data-text="bento.me" style="--r:25;" class="glass">
+              <i class="fa-solid fa-user"></i>
+            </div>
+          </a>
+        </div>
+      </section>
+    </div>
+
+    <script>
+      new fullpage("#fullpage", {
+        licenseKey: "YOUR_LICENSE_KEY", // Remove this line if using the free version
+        navigation: true, // Show navigation dots
+        scrollBar: false, // Disable scroll bar
+        sectionsColor: [
+          "#ffffff",
+          "#f7f7f7",
+          "#dcdcdc",
+          "#e3e3e3",
+          "#f0f0f0",
+          "#d9d9d9",
+        ], // Different background color for each section
+        easing: "easeInOutCubic", // Easing for smooth transitions
+        onLeave: function (origin, destination, direction) {
+          const leavingSection = this;
+          const newSection = destination;
+
+          // Smooth transition when the user scrolls down
+          if (direction === "down") {
+            leavingSection.item.classList.remove("fade-in");
+            leavingSection.item.classList.add("fade-out");
+            newSection.item.classList.add("fade-in");
+          }
+          // Smooth transition when the user scrolls up
+          else if (direction === "up") {
+            leavingSection.item.classList.remove("fade-in");
+            leavingSection.item.classList.add("fade-out");
+            newSection.item.classList.add("fade-in");
+          }
+        },
+        afterLoad: function (origin, destination, direction) {
+          // Ensuring the section is visible after loading
+          const newSection = destination;
+          newSection.item.classList.add("fade-in");
+        },
+      });
+    </script>
+  </body>
 </html>
