--- a/pages/travel_blog.html
+++ b/pages/travel_blog.html
@@ -1342,7 +1342,7 @@
           <a id="bestdestinations" href="">
             <div class="box">
               <i class="fa-solid fa-location-dot"></i>
-              <p>Best Destinations</p>
+              <p>My Route</p>
             </div>
           </a>
           <a id="myMemories" href="">
