contact side is finished but form not handled yet

--- a/pages/about.html
+++ b/pages/about.html
@@ -26,7 +26,7 @@
       <section class="section" id="section1">
         <header>
           <h1>Who Am I?</h1>
-          <p class="intro">I dont even know but, hi, I m Burcin.</p>
+          <p class="intro">I dont even know. I also try to know me. So, lets say simply, I m Burcin.</p>
         </header>
       </section>
 
@@ -156,14 +156,14 @@
       <section class="section" id="section7">
         <h2>Contact Me</h2>
         <div class="container">
-          <a href="https://github.com/iskburcin">
-            <div data-text="Github" style="--r:-15;" class="glass">
-              <i class="fa-brands fa-github"></i>
-            </div>
-          </a>
           <a href="https://www.linkedin.com/in/iskburcin/">
             <div data-text="LinkdIn" style="--r:5;" class="glass">
               <i class="fa-brands fa-linkedin"></i>
+            </div>
+          </a>
+          <a href="https://github.com/iskburcin">
+            <div data-text="Github" style="--r:-15;" class="glass">
+              <i class="fa-brands fa-github"></i>
             </div>
           </a>
           <a href="https://bento.me/iskburcin">
