--- a/pages/contact.html
+++ b/pages/contact.html
@@ -5,6 +5,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact</title>
     <link rel="stylesheet" href="/assets/styles/style_main.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Playwrite+NZ:wght@100..400&family=Saira+Condensed:wght@100;200;300;400;500;600;700;800;900&family=Sour+Gummy:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
   </head>
-  <body></body>
+  <body>
+    <div class="contact-body">
+      <div class="form-container">
+        <form class="form" action="/utils/send_message.php" method="POST">
+          <div class="form-group">
+            <label for="email">Email</label>
+            <input required name="email" id="email" type="email" />
+            <label for="subject">Subject:</label>
+            <input type="text" id="subject" name="subject" required />
+          </div>
+          <div class="form-group">
+            <label for="message">How Can We Help You?</label>
+            <textarea required cols="50" rows="10" id="message" name="message">
+            </textarea>
+          </div>
+          <button type="submit" class="form-submit-btn">Submit</button>
+        </form>
+      </div>
+    </div>
+  </body>
 </html>
