--- a/pages/contact.html
+++ b/pages/contact.html
@@ -15,7 +15,7 @@
   <body>
     <div class="contact-body">
       <div class="form-container">
-        <form class="form" action="/utils/send_message.php" method="POST">
+        <form class="form" action="C:/xampp/htdocs/mail_sender" method="POST">
           <div class="form-group">
             <label for="email">Email</label>
             <input required name="email" id="email" type="email" />
