--- a/countries/czk.html
+++ b/countries/czk.html
@@ -70,12 +70,12 @@
       <div class="indicator">
         <div class="symbol"></div>
       </div>
-      <div class="name active"><p>Krakow</p></div>
-      <div class="name"><p>Opole</p></div>
-      <div class="name"><p>Opole</p></div>
-      <div class="name"><p>Wroclaw</p></div>
-      <div class="name"><p>Wroclaw</p></div>
-      <div class="name"><p>Warsaw</p></div>
+      <div class="name active"><p>Powder Tower</p></div>
+      <div class="name"><p>Astronomic Clock</p></div>
+      <div class="name"><p>Stare Mesto</p></div>
+      <div class="name"><p>Synagogs</p></div>
+      <div class="name"><p>Charles Bridge</p></div>
+      <div class="name"><p>Aziz Vitus Cathedral</p></div>
     </div>
 
     <div class="preview-img">
