--- a/countries/fr.html
+++ b/countries/fr.html
@@ -73,12 +73,12 @@
       <div class="indicator">
         <div class="symbol"></div>
       </div>
-      <div class="name active"><p>Krakow</p></div>
-      <div class="name"><p>Opole</p></div>
-      <div class="name"><p>Opole</p></div>
-      <div class="name"><p>Wroclaw</p></div>
-      <div class="name"><p>Wroclaw</p></div>
-      <div class="name"><p>Warsaw</p></div>
+      <div class="name active"><p>Louvre Museum</p></div>
+      <div class="name"><p>Pantheon</p></div>
+      <div class="name"><p>Notre Dame Cathedral</p></div>
+      <div class="name"><p>L'Arc de Triomphe de I'Etoile</p></div>
+      <div class="name"><p>Champs Elysees</p></div>
+      <div class="name"><p>Eiffel</p></div>
     </div>
 
     <div class="preview-img">
