--- a/countries/hg.html
+++ b/countries/hg.html
@@ -70,12 +70,12 @@
       <div class="indicator">
         <div class="symbol"></div>
       </div>
-      <div class="name active"><p>Krakow</p></div>
-      <div class="name"><p>Opole</p></div>
-      <div class="name"><p>Opole</p></div>
-      <div class="name"><p>Wroclaw</p></div>
-      <div class="name"><p>Wroclaw</p></div>
-      <div class="name"><p>Warsaw</p></div>
+      <div class="name active"><p>Hungary Natinal Museum</p></div>
+      <div class="name"><p>Hösök Tere</p></div>
+      <div class="name"><p>Duna-parton</p></div>
+      <div class="name"><p>St. Stefan Basilica</p></div>
+      <div class="name"><p>Budavári Palota</p></div>
+      <div class="name"><p>Chain Bridge</p></div>
     </div>
 
     <div class="preview-img">
