--- a/pages/tech_blog.html
+++ b/pages/tech_blog.html
@@ -31,7 +31,7 @@
       <div class="animation start-home"></div>
     </nav>
 
-    <div id="python" class="category-content" style="display: none">
+    <div id="python" class="category-content">
       <h2>Python Snippets</h2>
       <div class="snippet">
         <h3>Basic Python Function</h3>
