--- a/countries/aus.html
+++ b/countries/aus.html
@@ -70,12 +70,12 @@
       <div class="indicator">
         <div class="symbol"></div>
       </div>
-      <div class="name active"><p>Krakow</p></div>
-      <div class="name"><p>Opole</p></div>
-      <div class="name"><p>Opole</p></div>
-      <div class="name"><p>Wroclaw</p></div>
-      <div class="name"><p>Wroclaw</p></div>
-      <div class="name"><p>Warsaw</p></div>
+      <div class="name active"><p>GroBe Bassin</p></div>
+      <div class="name"><p>Sigmund Freud</p></div>
+      <div class="name"><p>Votiv Church</p></div>
+      <div class="name"><p>Sisi Museum</p></div>
+      <div class="name"><p>Column of Pest</p></div>
+      <div class="name"><p>Belvedere Palace</p></div>
     </div>
 
     <div class="preview-img">
