--- a/countries/be.html
+++ b/countries/be.html
@@ -70,12 +70,12 @@
       <div class="indicator">
         <div class="symbol"></div>
       </div>
-      <div class="name active"><p>Krakow</p></div>
-      <div class="name"><p>Opole</p></div>
-      <div class="name"><p>Opole</p></div>
-      <div class="name"><p>Wroclaw</p></div>
-      <div class="name"><p>Wroclaw</p></div>
-      <div class="name"><p>Warsaw</p></div>
+      <div class="name active"><p>Rue Neuve</p></div>
+      <div class="name"><p>Town Hall</p></div>
+      <div class="name"><p>St. Michael & St. Gudula Cathedral</p></div>
+      <div class="name"><p>Manneken Pis</p></div>
+      <div class="name"><p>Palais Royal</p></div>
+      <div class="name"><p>Grand-Place de Bruxelles</p></div>
     </div>
 
     <div class="preview-img">
