--- a/countries/nl.html
+++ b/countries/nl.html
@@ -70,12 +70,12 @@
       <div class="indicator">
         <div class="symbol"></div>
       </div>
-      <div class="name active"><p>Krakow</p></div>
-      <div class="name"><p>Opole</p></div>
-      <div class="name"><p>Opole</p></div>
-      <div class="name"><p>Wroclaw</p></div>
-      <div class="name"><p>Wroclaw</p></div>
-      <div class="name"><p>Warsaw</p></div>
+      <div class="name active"><p>Erasmusburg</p></div>
+      <div class="name"><p>St. Lawrence Church</p></div>
+      <div class="name"><p>Kubus Museum house</p></div>
+      <div class="name"><p>Euromast</p></div>
+      <div class="name"><p>Vondelpark</p></div>
+      <div class="name"><p>Grachtengordel</p></div>
     </div>
 
     <div class="preview-img">
