--- a/countries/sk.html
+++ b/countries/sk.html
@@ -70,12 +70,12 @@
       <div class="indicator">
         <div class="symbol"></div>
       </div>
-      <div class="name active"><p>Krakow</p></div>
-      <div class="name"><p>Opole</p></div>
-      <div class="name"><p>Opole</p></div>
-      <div class="name"><p>Wroclaw</p></div>
-      <div class="name"><p>Wroclaw</p></div>
-      <div class="name"><p>Warsaw</p></div>
+      <div class="name active"><p>Cumil</p></div>
+      <div class="name"><p>Natinal Park</p></div>
+      <div class="name"><p>Bratislava Castle</p></div>
+      <div class="name"><p>St. Martin Cathedral</p></div>
+      <div class="name"><p>Michael's Gate</p></div>
+      <div class="name"><p>Most SNP</p></div>
     </div>
 
     <div class="preview-img">
